--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -127,6 +127,10 @@ body {
   background-color: rgb(22,70,49);
 }
 
+.btn-contrast-red {
+  background-color: rgb(255,00,00);
+}
+
 .start-survey {
   color: white;
   background-color: rgb(144,220,0);
